SONAR-27115 CE loads rule default descriptions for GitHub Scanning Alerts only